@@ -13,6 +13,8 @@ checkAdmin();
 /* get all custom fields */
 $myFields = getCustomIPaddrFields();
 
+/* Custom fields by number */
+$myFieldsNum = getCustomIPaddrFieldsNumArr();
 ?>
 
 
@@ -25,7 +27,7 @@ You can add additional custom fields to IP address table (like CustomerId, locat
 
 <!-- headers -->
 <tr class="th">
-	<th colspan="4">My custom fields:</th>
+	<th colspan="5">My custom fields:</th>
 </tr>
 
 
@@ -35,21 +37,35 @@ You can add additional custom fields to IP address table (like CustomerId, locat
 if(sizeof($myFields) == 0) {
 
 	print '<tr>'. "\n";
-	print '<td colspan="2">No custom fields created yet</td>'. "\n";
+	print '<td colspan="5">No custom fields created yet</td>'. "\n";
 	print '</tr>'. "\n";
 }
 /* already available */
 else {
+
+	# get size
+	$size = sizeof($myFields);
+	$m = 0;
 
 	foreach($myFields as $field)
 	{
 	print '<tr>'. "\n";
 	print '<td class="name">'. $field['name'] .'</td>'. "\n";
 	print '<td>'. $field['type'] .'</td>'. "\n";
+	# ordering
+	if (( ($m+1) != $size) ) {
+	print '<td class="img"><img src="css/images/down.png" class="down" title="Move down" fieldName="'. $myFieldsNum[$m] .'" nextFieldName="'. $myFieldsNum[$m+1] .'"></td>'. "\n";		
+	}
+	else {
+		print '<td></td>'. "\n";
+	}
 	#actions
 	print '<td class="img"><img src="css/images/edit.png" class="edit" title="Edit field" fieldName="'. $field['name'] .'"></td>'. "\n";
 	print '<td class="img"><img src="css/images/deleteIP.png" class="delete" title="Delete field" fieldName="'. $field['name'] .'"></td>'. "\n";
-	print '</tr>'. "\n";	
+	print '</tr>'. "\n";
+	
+	$prevName = $field['name'];
+	$m++;	
 	}
 }
 
@@ -57,7 +73,7 @@ else {
 
 <!-- add -->
 <tr class="th" style="border-top:1px solid white">
-	<td colspan="4" class="img">
+	<td colspan="5" class="img">
 		<img src="css/images/add.png" class="add" title="Add new field"> Add new custom field
 	</td>
 </tr>
