@@ -1,0 +1,28 @@
+<?php
+
+/**
+ * Script tomanage custom IP fields
+ ****************************************/
+
+/* required functions */
+require_once('../../functions/functions.php'); 
+
+/* verify that user is admin */
+checkAdmin();
+
+
+/* some verifications */
+if( (empty($_POST['current'])) || (empty($_POST['next'])) ) {
+	die('<div class="error">Fileds cannot be empty!</div>');
+}
+
+
+/* reorder */
+if(!reorderCustomIPField($_POST['next'], $_POST['current'])) {
+	die('<div class="error">Reordering failed!</div>');	
+}
+else {
+	print '<div class="success">Fields reordered successfully!</div>';
+}
+
+?>
