@@ -5,6 +5,8 @@
 	
 	Enhancements:
 	----------------------------
+	+ Search results covering VLANs;
+	+ Custom IP fields ordering;
 
 	Bugfixes:
 	------------------------
